--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "~12.0.0",
     "chart.js": "^3.3.2",
     "cors": "^2.8.5",
+    "pdfmake": "^0.1.71",
+    "pdfmake-wrapper": "^2.1.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.0.9",
     "tslib": "^2.1.0",
@@ -31,6 +33,7 @@
     "@angular/compiler-cli": "~12.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/pdfmake": "^0.1.17",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
